tests/lean/namespace_bug.lean.expected.out
namespace_bug.lean:5:7: error: invalid expression
