tests/lean/namespace_bug.lean
namespace playground
namespace nat
check 2+3 -- Should produce error
end nat
end playground
